@startuml

package Product <<Cloud>> {
    class Product << (A,#f6d53d) AggregateRoot >> {
        productNo: String
        name: String
        price: MonetaryAmount
        hasStock()
    }
}
package Order <<Cloud>> {
    class Order << (A,#f6d53d) AggregateRoot >> {
        customer: String
        orderNo: String
        orderDate: LocalDate
        lines: List<OrderLine>
    }
    class OrderLine << (E,#f6d53d) Entity >>  {
        product: Product.ProductAssociation
        name: String
        price: MonetaryAmount
        quantity: int
    }
    Order *-- OrderLine
    OrderLine --> Product
}

'Admin "1" -u-> "n" Vote : association
'Admin "1" -u-> "n" Decision : association
'Admin "1" -u-> "n" Comment : association
'
'Application "1" *-- "n" Vote : aggregation
'Application "1" *-- "1" Decision : aggregation
'Application "1" --> "n" Comment : association
'Application "1" --> "n" Attachment : association

@enduml
